// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> with and clicks the card feature 1`] = `
<div
  class="card__Group-sc-1tn30zk-2 cnwQwt"
>
  <div
    class="card__Container-sc-1tn30zk-1 kJHQgW"
  >
    <p
      class="card__Title-sc-1tn30zk-0 iPHpya"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-1tn30zk-5 bJGxpN"
    >
      <div
        class="card__Item-sc-1tn30zk-8 bFTNtu"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-1tn30zk-7 jVaXVh"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-6 hSiHRx"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 gSUxfi"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 fwLGcr"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-1tn30zk-1 kJHQgW"
  >
    <p
      class="card__Title-sc-1tn30zk-0 iPHpya"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-1tn30zk-5 bJGxpN"
    >
      <div
        class="card__Item-sc-1tn30zk-8 bFTNtu"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-1tn30zk-7 jVaXVh"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-6 hSiHRx"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 gSUxfi"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 fwLGcr"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-sc-1tn30zk-2 cnwQwt"
>
  <div
    class="card__Container-sc-1tn30zk-1 kJHQgW"
  >
    <p
      class="card__Title-sc-1tn30zk-0 iPHpya"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-1tn30zk-5 bJGxpN"
    >
      <div
        class="card__Item-sc-1tn30zk-8 bFTNtu"
      >
        <img
          class="card__Image-sc-1tn30zk-7 jVaXVh"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-6 hSiHRx"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 gSUxfi"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 fwLGcr"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-1tn30zk-1 kJHQgW"
  >
    <p
      class="card__Title-sc-1tn30zk-0 iPHpya"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-1tn30zk-5 bJGxpN"
    >
      <div
        class="card__Item-sc-1tn30zk-8 bFTNtu"
      >
        <img
          class="card__Image-sc-1tn30zk-7 jVaXVh"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-6 hSiHRx"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 gSUxfi"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 fwLGcr"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
